--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "script-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://runiitime.github.io/scripts-list/.",
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,6 +15,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^8.0.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b gpages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
