--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^8.0.0",
     "gh-pages": "^3.1.0",
+    "immer": "^7.0.7",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^3.7.5",
     "uuid": "^8.2.0"
