--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.43",
@@ -15,6 +16,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^8.0.0",
+    "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
     "immer": "^7.0.7",
     "immutable": "^4.0.0-rc.12",
