--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react-redux": "^7.1.9",
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^8.0.0",
+    "ace-builds": "^1.4.12",
     "classnames": "^2.2.6",
     "gh-pages": "^3.1.0",
     "immer": "^7.0.7",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
+    "react-ace": "^9.1.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
